updated core skills section and expereriences section

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
             <p>
               Automated subnet allocation by building a Python tool for ESP site management and implemented address space allocation based on standard design patterns.
             </p>
-            <p class="stack">Impact: Saved approximately 30 hours per week.</p>
+            <p class="stack">Impact: Saved approximately 30 hours per week, reduced manual provisioning errors, and improved consistency in network address planning across teams.</p>
           </article>
           <article class="card">
-            <h3>UNC Charlotte • Teaching/Instructional Assistant</h3>
-            <p>January 2024 – May 2024</p>
+            <h3>Klear.ai • Software Engineering Intern</h3>
+            <p>May 2025 – August 2025</p>
             <p>
-              Supported Data Structures students through labs and office hours, helping explain core concepts and debug complex coding assignments.
+              Analyzed property and casualty insurance workflows (GL and WC) to identify process inefficiencies, then supported backend solutions that reduced manual work and improved data accuracy.
             </p>
-            <p class="stack">Focus: Student support, debugging, clear technical communication.</p>
+            <p class="stack">Impact: Built and optimized SQL-based pipelines that improved master data reliability, reduced delivery bottlenecks, and supported more timely enterprise reporting.</p>
           </article>
           <article class="card">
             <h3>Revelin7 Technology • Software Intern</h3>
@@ -90,7 +90,7 @@
             <p>
               Performed data analysis for blockchain management software and collaborated with a team to deliver tasks on time with strong documentation.
             </p>
-            <p class="stack">Focus: Data analysis, collaboration, communication.</p>
+            <p class="stack">Impact: Improved data quality in blockchain management workflows and helped the team deliver dependable, well-documented releases on schedule.</p>
           </article>
         </div>
       </section>
@@ -101,15 +101,16 @@
           <article class="card">
             <h3>WiseWallet</h3>
             <p>
-              Personal finance-focused project centered on helping users track spending, monitor budgets, and make more informed money decisions.
+              WiseWallet is a full-stack personal finance web app built to simplify money management through one secure and easy-to-use platform. Users can track income and expenses, organize budgets, and review financial reports that make trends and spending habits more visible.
             </p>
-            <p class="stack">Tech: To be updated</p>
+            <p class="stack">Highlights: JWT authentication, OCR + AI receipt parsing, and dashboard reporting.</p>
+            <p class="stack">Tech: HTML, CSS, JavaScript, Node.js, Express, PostgreSQL</p>
             <a href="https://wisewallet.manuswebworks.org/register.html" target="_blank" rel="noreferrer" aria-label="View WiseWallet live web app">Project Link</a>
           </article>
           <article class="card">
             <h3>TreeSense</h3>
             <p>
-              TreeSense is a web application that identifies tree species from leaf images using a deep learning model. It uses a server-side API architecture to avoid browser compilation issues with large TensorFlow.js models.
+              TreeSense is a web app that classifies tree species from leaf images using a deep learning model, built with a clean front end and a backend API for reliable predictions.
             </p>
             <p class="stack">Tech: React, TypeScript, Vite, Flask, Keras MobileNetV2</p>
             <p class="stack">Architecture: Server-side API design with Vite proxy routing /api/* requests to the Flask backend.</p>
@@ -118,10 +119,10 @@
           <article class="card">
             <h3>HoopConnect</h3>
             <p>
-              HoopConnect is a front-end NBA web app where fans can explore players, browse teams by division, and engage through an interactive fan form.
+              HoopConnect is a front-end NBA web app where fans can explore players, browse teams, and engage through a fan-focused multi-page experience built for smooth and interactive navigation.
             </p>
+            <p class="stack">Highlights: Image carousel, player/team browsing, and form validation.</p>
             <p class="stack">Tech: HTML, CSS, JavaScript, Local JSON Data</p>
-            <p class="stack">Highlights: Hero image carousel, tab-based player profiles, division-based team filtering, and real-time form validation.</p>
             <a href="https://atijare.github.io/Hoop-Connect/" target="_blank" rel="noreferrer" aria-label="View HoopConnect live web app">Project Link</a>
           </article>
           <article class="card">
@@ -154,10 +155,10 @@
       <section id="skills" class="section container">
         <h2>Core Skills</h2>
         <ul class="skill-list">
-          <li>Languages: Python, C, JavaScript</li>
-          <li>Web: HTML, CSS, JavaScript, API Integration</li>
-          <li>Core CS: Data Structures, Algorithms, Database Design</li>
-          <li>Engineering: Software Engineering, QA, Testing & Debugging</li>
+          <li>Languages: Python, Java, JavaScript, SQL, C/C++</li>
+          <li>Web & Backend: HTML, CSS, Node.js, Express, REST APIs, Google Cloud Platform (API's, JS, SDKs)</li>
+          <li>Data & ML: Pandas, NumPy, scikit-learn, TensorFlow</li>
+          <li>Core CS: Machine Learning, AI, Data Science, Data Structures, Algorithms, Database Design</li>
         </ul>
       </section>
 
