updated skills section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <li>Languages: Python, Java, JavaScript, SQL, C/C++</li>
           <li>Web & Backend: HTML, CSS, Node.js, Express, REST APIs, Google Cloud Platform (API's, JS, SDKs)</li>
           <li>Data & ML: Pandas, NumPy, scikit-learn, TensorFlow</li>
-          <li>Core CS: Machine Learning, AI, Data Science, Data Structures, Algorithms, Database Design</li>
+          <li>Core CS: Machine Learning, AI, Data Science, Data Structures, Algorithms, Database Design, Scrum/Agile</li>
         </ul>
       </section>
 
