--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul>
       </nav>
       <section id="top" class="hero container">
-        <p class="eyebrow">Software Engineering Student • Cybersecurity Concentration</p>
+        <p class="eyebrow">Software Engineering Student • Data Science Concentration</p>
         <h1>Atharva Tijare</h1>
         <p class="hero-copy">
           Computer Science student at UNC Charlotte (GPA 3.84) with internship experience at Cisco and hands-on project work in web development, APIs, and data-driven applications.
@@ -46,7 +46,7 @@
       <section id="about" class="section container">
         <h2>About Me</h2>
         <p>
-          I am a Computer Science student at the University of North Carolina Charlotte, graduating in May 2026, with a concentration in Cybersecurity. I enjoy building reliable software and applying strong engineering fundamentals to solve real business problems.
+          I am a Computer Science student at the University of North Carolina Charlotte, graduating in May 2026, with a concentration in Data Science. I enjoy building reliable software and applying strong engineering fundamentals to solve real business problems.
         </p>
         <p>
           My background includes software engineering internship experience at Cisco, teaching support for Data Structures, and project work using Python, JavaScript, and API-driven web technologies.
@@ -58,7 +58,7 @@
         <div class="cards">
           <article class="card">
             <h3>University of North Carolina Charlotte</h3>
-            <p>B.S. in Computer Science • Concentration in Cybersecurity</p>
+            <p>B.S. in Computer Science • Concentration in Data Science</p>
             <p>GPA: 3.84 • Expected Graduation: May 2026</p>
             <p class="stack">Honors: Dean's List, Chancellor's List</p>
           </article>
