added images to respective expereince and project

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
         <h2>Experience</h2>
         <div class="cards">
           <article class="card">
-            <h3>Cisco Systems Inc. • Software Engineering Intern</h3>
+            <div class="card-title-row">
+              <img src="Images/cisco.png" alt="Cisco logo" class="card-logo" />
+              <h3>Cisco Systems Inc. • Software Engineering Intern</h3>
+            </div>
             <p>July 2024 – September 2024</p>
             <p>
               Automated subnet allocation by building a Python tool for ESP site management and implemented address space allocation based on standard design patterns.
@@ -77,7 +80,10 @@
             <p class="stack">Impact: Saved approximately 30 hours per week, reduced manual provisioning errors, and improved consistency in network address planning across teams.</p>
           </article>
           <article class="card">
-            <h3>Klear.ai • Software Engineering Intern</h3>
+            <div class="card-title-row">
+              <img src="Images/Klear.png" alt="Klear.ai logo" class="card-logo" />
+              <h3>Klear.ai • Software Engineering Intern</h3>
+            </div>
             <p>May 2025 – August 2025</p>
             <p>
               Analyzed property and casualty insurance workflows (GL and WC) to identify process inefficiencies, then supported backend solutions that reduced manual work and improved data accuracy.
@@ -85,7 +91,10 @@
             <p class="stack">Impact: Built and optimized SQL-based pipelines that improved master data reliability, reduced delivery bottlenecks, and supported more timely enterprise reporting.</p>
           </article>
           <article class="card">
-            <h3>Revelin7 Technology • Software Intern</h3>
+            <div class="card-title-row">
+              <img src="Images/revelin7.png" alt="Revelin7 Technology logo" class="card-logo" />
+              <h3>Revelin7 Technology • Software Intern</h3>
+            </div>
             <p>March 2021 – July 2021</p>
             <p>
               Performed data analysis for blockchain management software and collaborated with a team to deliver tasks on time with strong documentation.
@@ -99,31 +108,43 @@
         <h2>Projects</h2>
         <div class="cards">
           <article class="card">
-            <h3>WiseWallet</h3>
+            <div class="card-title-row">
+              <img src="Images/wisewallet.png" alt="WiseWallet logo" class="card-logo" />
+              <h3>
+                <a href="https://wisewallet.manuswebworks.org/register.html" target="_blank" rel="noreferrer" aria-label="View WiseWallet live web app">WiseWallet</a>
+              </h3>
+            </div>
             <p>
               WiseWallet is a full-stack personal finance web app built to simplify money management through one secure and easy-to-use platform. Users can track income and expenses, organize budgets, and review financial reports that make trends and spending habits more visible.
             </p>
             <p class="stack">Highlights: JWT authentication, OCR + AI receipt parsing, and dashboard reporting.</p>
             <p class="stack">Tech: HTML, CSS, JavaScript, Node.js, Express, PostgreSQL</p>
-            <a href="https://wisewallet.manuswebworks.org/register.html" target="_blank" rel="noreferrer" aria-label="View WiseWallet live web app">Project Link</a>
           </article>
           <article class="card">
-            <h3>TreeSense</h3>
+            <div class="card-title-row">
+              <img src="Images/treesense.png" alt="TreeSense logo" class="card-logo" />
+              <h3>
+                <a href="https://atijare.github.io/TreeSense/" target="_blank" rel="noreferrer" aria-label="View TreeSense live web app">TreeSense</a>
+              </h3>
+            </div>
             <p>
               TreeSense is a web app that classifies tree species from leaf images using a deep learning model, built with a clean front end and a backend API for reliable predictions.
             </p>
             <p class="stack">Tech: React, TypeScript, Vite, Flask, Keras MobileNetV2</p>
             <p class="stack">Architecture: Server-side API design with Vite proxy routing /api/* requests to the Flask backend.</p>
-            <a href="https://atijare.github.io/TreeSense/" target="_blank" rel="noreferrer" aria-label="View TreeSense live web app">Project Link</a>
           </article>
           <article class="card">
-            <h3>HoopConnect</h3>
+            <div class="card-title-row">
+              <img src="Images/hoopconnect.png" alt="HoopConnect logo" class="card-logo" />
+              <h3>
+                <a href="https://atijare.github.io/Hoop-Connect/" target="_blank" rel="noreferrer" aria-label="View HoopConnect live web app">HoopConnect</a>
+              </h3>
+            </div>
             <p>
               HoopConnect is a front-end NBA web app where fans can explore players, browse teams, and engage through a fan-focused multi-page experience built for smooth and interactive navigation.
             </p>
             <p class="stack">Highlights: Image carousel, player/team browsing, and form validation.</p>
             <p class="stack">Tech: HTML, CSS, JavaScript, Local JSON Data</p>
-            <a href="https://atijare.github.io/Hoop-Connect/" target="_blank" rel="noreferrer" aria-label="View HoopConnect live web app">Project Link</a>
           </article>
         </div>
       </section>
