--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         <h2>Education</h2>
         <div class="cards">
           <article class="card">
-            <h3>University of North Carolina Charlotte</h3>
+            <div class="card-title-row">
+              <img src="Images/uncc.png" alt="UNC Charlotte logo" class="card-logo" />
+              <h3>University of North Carolina Charlotte</h3>
+            </div>
             <p>B.S. in Computer Science • Concentration in Data Science</p>
             <p>GPA: 3.75 • Expected Graduation: May 2026</p>
             <p class="stack">Honors: Dean's List, Chancellor's List</p>
