Really Good Personal/Professional Website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&family=Source+Serif+4:opsz,wght@8..60,500;8..60,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Space+Grotesk:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -33,7 +33,7 @@
         <p class="eyebrow">Software Engineering Student • Data Science Concentration</p>
         <h1>Atharva Tijare</h1>
         <p class="hero-copy">
-          Computer Science student at UNC Charlotte (GPA 3.84) with internship experience at Cisco and hands-on project work in web development, APIs, and data-driven applications.
+          Computer Science student at UNC Charlotte (GPA 3.75) with internship experience and hands-on project work in web development, APIs, and data-driven applications.
         </p>
         <div class="hero-actions">
           <a href="#projects" class="btn btn-primary">View Projects</a>
@@ -46,7 +46,7 @@
       <section id="about" class="section container">
         <h2>About Me</h2>
         <p>
-          I am a Computer Science student at the University of North Carolina Charlotte, graduating in May 2026, with a concentration in Data Science. I enjoy building reliable software and applying strong engineering fundamentals to solve real business problems.
+          Computer Science student at the University of North Carolina Charlotte, graduating in May 2026, with a concentration in Data Science. I enjoy building reliable software and applying strong engineering fundamentals to solve real business problems.
         </p>
         <p>
           My background includes software engineering internship experience at Cisco, teaching support for Data Structures, and project work using Python, JavaScript, and API-driven web technologies.
