formatting and content changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Atharva Tijare | Personal Website</title>
     <meta
       name="description"
-      content="Professional personal website featuring background, projects, skills, and contact details."
+      content="Personal website of Atharva Tijare: projects, experiments, story, and ways to connect."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,6 +22,8 @@
         <a href="#top" class="logo">Atharva Tijare</a>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
+          <li><a href="#now">Now</a></li>
+          <li><a href="#featured">Featured</a></li>
           <li><a href="#education">Education</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -30,14 +32,14 @@
         </ul>
       </nav>
       <section id="top" class="hero container">
-        <p class="eyebrow">Software Engineering Student • Data Science Concentration</p>
+        <p class="eyebrow">Builder • Basketball fan • Curious engineer</p>
         <h1>Atharva Tijare</h1>
         <p class="hero-copy">
-          Computer Science student at UNC Charlotte (GPA 3.75) with internship experience and hands-on project work in web development, APIs, and data-driven applications.
+          Love turning messy ideas into clean products. Most of what I build sits at the intersection of useful UX, practical engineering, and data-backed decisions.
         </p>
         <div class="hero-actions">
-          <a href="#projects" class="btn btn-primary">View Projects</a>
-          <a href="#contact" class="btn btn-secondary">Contact Me</a>
+          <a href="#projects" class="btn btn-primary">See Experiments</a>
+          <a href="#contact" class="btn btn-secondary">Say Hi</a>
         </div>
       </section>
     </header>
@@ -46,11 +48,49 @@
       <section id="about" class="section container">
         <h2>About Me</h2>
         <p>
-          Computer Science student at the University of North Carolina Charlotte, graduating in May 2026, with a concentration in Data Science. I enjoy building reliable software and applying strong engineering fundamentals to solve real business problems.
+          I am a Computer Science student at UNC Charlotte, but this site is less about titles and more about how I think: prototype fast, test ideas in the real world, then refine until it feels effortless.
         </p>
         <p>
-          My background includes software engineering internship experience at Cisco, teaching support for Data Structures, and project work using Python, JavaScript, and API-driven web technologies.
+          I care about software that people actually want to use. That means good logic under the hood and clear, friendly interfaces on top.
         </p>
+      </section>
+
+      <section id="now" class="section container">
+        <h2>What I'm Building Now</h2>
+        <div class="split-grid">
+          <article class="card">
+            <h3>Current Obsession</h3>
+            <p>
+              Designing apps that feel simple on day one but remain powerful on day one hundred. Lately, I am exploring AI-assisted features that reduce repetitive user input.
+            </p>
+          </article>
+          <article class="card">
+            <h3>Outside The Screen</h3>
+            <p>
+              Basketball and lifting with friends, plus podcast episodes about product and startups. A lot of my project ideas start there before they become commits.
+            </p>
+          </article>
+        </div>
+      </section>
+
+      <section id="featured" class="section container">
+        <h2>Featured Project Story</h2>
+        <article class="card featured-card">
+          <div class="card-title-row">
+            <img src="Images/wisewallet.png" alt="WiseWallet logo" class="card-logo" />
+            <h3>WiseWallet</h3>
+          </div>
+          <p>
+            I built WiseWallet to solve a simple problem: most budgeting tools are either too complex or too shallow. The goal was to keep the interface intuitive while still delivering serious features like secure auth, smart receipt parsing, and useful reporting.
+          </p>
+          <ul class="beat-list">
+            <li>Idea: Make budget tracking feel like a habit, not a chore.</li>
+            <li>Build: Started with auth + core expense flow before adding AI layers.</li>
+            <li>Learned: Users stay longer when setup friction is nearly zero.</li>
+          </ul>
+          <p class="stack">Challenge: Balance security, usability, and AI-assisted automation in one coherent product.</p>
+          <p class="stack">Outcome: A full-stack app that helps users track spending habits with less manual effort.</p>
+        </article>
       </section>
 
       <section id="education" class="section container">
@@ -73,17 +113,6 @@
         <div class="cards">
           <article class="card">
             <div class="card-title-row">
-              <img src="Images/cisco.png" alt="Cisco logo" class="card-logo" />
-              <h3>Cisco Systems Inc. • Software Engineering Intern</h3>
-            </div>
-            <p>July 2024 – September 2024</p>
-            <p>
-              Automated subnet allocation by building a Python tool for ESP site management and implemented address space allocation based on standard design patterns.
-            </p>
-            <p class="stack">Impact: Saved approximately 30 hours per week, reduced manual provisioning errors, and improved consistency in network address planning across teams.</p>
-          </article>
-          <article class="card">
-            <div class="card-title-row">
               <img src="Images/Klear.png" alt="Klear.ai logo" class="card-logo" />
               <h3>Klear.ai • Software Engineering Intern</h3>
             </div>
@@ -92,6 +121,17 @@
               Analyzed property and casualty insurance workflows (GL and WC) to identify process inefficiencies, then supported backend solutions that reduced manual work and improved data accuracy.
             </p>
             <p class="stack">Impact: Built and optimized SQL-based pipelines that improved master data reliability, reduced delivery bottlenecks, and supported more timely enterprise reporting.</p>
+          </article>
+          <article class="card">
+            <div class="card-title-row">
+              <img src="Images/cisco.png" alt="Cisco logo" class="card-logo" />
+              <h3>Cisco Systems Inc. • Software Engineering Intern</h3>
+            </div>
+            <p>July 2024 – September 2024</p>
+            <p>
+              Automated subnet allocation by building a Python tool for ESP site management and implemented address space allocation based on standard design patterns.
+            </p>
+            <p class="stack">Impact: Saved approximately 30 hours per week, reduced manual provisioning errors, and improved consistency in network address planning across teams.</p>
           </article>
           <article class="card">
             <div class="card-title-row">
