--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Space+Grotesk:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600;9..144,700&family=Sora:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -38,7 +38,7 @@
           Love turning messy ideas into clean products. Most of what I build sits at the intersection of useful UX, practical engineering, and data-backed decisions.
         </p>
         <div class="hero-actions">
-          <a href="#projects" class="btn btn-primary">See Experiments</a>
+          <a href="#projects" class="btn btn-primary">See Projects</a>
           <a href="#contact" class="btn btn-secondary">Say Hi</a>
         </div>
       </section>
